Revert "feat: Implement HATEOAS support across controllers and models"